Fixed/updated some debian packaging stuff

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cabrio (0.8.2-0ubuntu1) unstable; urgency=low
+
+  * Fredbcode git version (commit #246)
+  * Bump some of debian standard
+
+ -- Sérgio Benjamim <sergio_br2@yahoo.com.br>  Fri, 06 Jun 2014 15:00:00 +0100
+
 cabrio (0.8.2-1) unstable; urgency=low
 
   * Fixes for Ubuntu 10
